mlir-c/IR.h

  
  struct MlirNamedAttribute
  {
    MlirStringRef name;
    MlirAttribute attribute;
  };
  typedef struct MlirNamedAttribute MlirNamedAttribute;
  MLIR_CAPI_EXPORTED MlirContext mlirContextCreate();
  MLIR_CAPI_EXPORTED bool mlirContextEqual(MlirContext ctx1, MlirContext ctx2);
  static inline bool mlirContextIsNull(MlirContext context)
  {
    return !context.ptr;
  }
  MLIR_CAPI_EXPORTED void mlirContextDestroy(MlirContext context);
  MLIR_CAPI_EXPORTED void
  mlirContextSetAllowUnregisteredDialects(MlirContext context, bool allow);
  MLIR_CAPI_EXPORTED bool
  mlirContextGetAllowUnregisteredDialects(MlirContext context);
  MLIR_CAPI_EXPORTED intptr_t
  mlirContextGetNumRegisteredDialects(MlirContext context);
  MLIR_CAPI_EXPORTED intptr_t
  mlirContextGetNumLoadedDialects(MlirContext context);
  MLIR_CAPI_EXPORTED MlirDialect mlirContextGetOrLoadDialect(MlirContext context,
                                                             MlirStringRef name);
  MLIR_CAPI_EXPORTED MlirContext mlirDialectGetContext(MlirDialect dialect);
  static inline bool mlirDialectIsNull(MlirDialect dialect)
  {
    return !dialect.ptr;
  }
  MLIR_CAPI_EXPORTED bool mlirDialectEqual(MlirDialect dialect1,
                                           MlirDialect dialect2);
  MLIR_CAPI_EXPORTED MlirStringRef mlirDialectGetNamespace(MlirDialect dialect);
  MLIR_CAPI_EXPORTED MlirLocation mlirLocationFileLineColGet(
      MlirContext context, MlirStringRef filename, unsigned line, unsigned col);
  MLIR_CAPI_EXPORTED MlirLocation mlirLocationUnknownGet(MlirContext context);
  MLIR_CAPI_EXPORTED MlirContext mlirLocationGetContext(MlirLocation location);
  static inline bool mlirLocationIsNull(MlirLocation location)
  {
    return !location.ptr;
  }
  MLIR_CAPI_EXPORTED bool mlirLocationEqual(MlirLocation l1, MlirLocation l2);
  MLIR_CAPI_EXPORTED void mlirLocationPrint(MlirLocation location,
                                            MlirStringCallback callback,
                                            void *userData);
  MLIR_CAPI_EXPORTED MlirModule mlirModuleCreateEmpty(MlirLocation location);
  MLIR_CAPI_EXPORTED MlirModule mlirModuleCreateParse(MlirContext context,
                                                      MlirStringRef module);
  MLIR_CAPI_EXPORTED MlirContext mlirModuleGetContext(MlirModule module);
  MLIR_CAPI_EXPORTED MlirBlock mlirModuleGetBody(MlirModule module);
  static inline bool mlirModuleIsNull(MlirModule module) { return !module.ptr; }
  MLIR_CAPI_EXPORTED void mlirModuleDestroy(MlirModule module);
  MLIR_CAPI_EXPORTED MlirOperation mlirModuleGetOperation(MlirModule module);
  struct MlirOperationState
  {
    MlirStringRef name;
    MlirLocation location;
    intptr_t nResults;
    MlirType *results;
    intptr_t nOperands;
    MlirValue *operands;
    intptr_t nRegions;
    MlirRegion *regions;
    intptr_t nSuccessors;
    MlirBlock *successors;
    intptr_t nAttributes;
    MlirNamedAttribute *attributes;
  };
  typedef struct MlirOperationState MlirOperationState;
  MLIR_CAPI_EXPORTED MlirOperationState mlirOperationStateGet(MlirStringRef name,
                                                              MlirLocation loc);
  MLIR_CAPI_EXPORTED void mlirOperationStateAddResults(MlirOperationState *state,
                                                       intptr_t n,
                                                       MlirType const *results);
  MLIR_CAPI_EXPORTED void
  mlirOperationStateAddOperands(MlirOperationState *state, intptr_t n,
                                MlirValue const *operands);
  MLIR_CAPI_EXPORTED void
  mlirOperationStateAddOwnedRegions(MlirOperationState *state, intptr_t n,
                                    MlirRegion const *regions);
  MLIR_CAPI_EXPORTED void
  mlirOperationStateAddSuccessors(MlirOperationState *state, intptr_t n,
                                  MlirBlock const *successors);
  MLIR_CAPI_EXPORTED void
  mlirOperationStateAddAttributes(MlirOperationState *state, intptr_t n,
                                  MlirNamedAttribute const *attributes);
  MLIR_CAPI_EXPORTED MlirOpPrintingFlags mlirOpPrintingFlagsCreate();
  MLIR_CAPI_EXPORTED void mlirOpPrintingFlagsDestroy(MlirOpPrintingFlags flags);
  MLIR_CAPI_EXPORTED void
  mlirOpPrintingFlagsElideLargeElementsAttrs(MlirOpPrintingFlags flags,
                                             intptr_t largeElementLimit);
  MLIR_CAPI_EXPORTED void
  mlirOpPrintingFlagsEnableDebugInfo(MlirOpPrintingFlags flags, bool prettyForm);
  MLIR_CAPI_EXPORTED void
  mlirOpPrintingFlagsPrintGenericOpForm(MlirOpPrintingFlags flags);
  MLIR_CAPI_EXPORTED void
  mlirOpPrintingFlagsUseLocalScope(MlirOpPrintingFlags flags);
  MLIR_CAPI_EXPORTED MlirOperation
  mlirOperationCreate(const MlirOperationState *state);
  MLIR_CAPI_EXPORTED void mlirOperationDestroy(MlirOperation op);
  static inline bool mlirOperationIsNull(MlirOperation op) { return !op.ptr; }
  MLIR_CAPI_EXPORTED bool mlirOperationEqual(MlirOperation op,
                                             MlirOperation other);
  MLIR_CAPI_EXPORTED MlirIdentifier mlirOperationGetName(MlirOperation op);
  MLIR_CAPI_EXPORTED MlirBlock mlirOperationGetBlock(MlirOperation op);
  MLIR_CAPI_EXPORTED MlirOperation
  mlirOperationGetParentOperation(MlirOperation op);
  MLIR_CAPI_EXPORTED intptr_t mlirOperationGetNumRegions(MlirOperation op);
  MLIR_CAPI_EXPORTED MlirRegion mlirOperationGetRegion(MlirOperation op,
                                                       intptr_t pos);
  MLIR_CAPI_EXPORTED MlirOperation mlirOperationGetNextInBlock(MlirOperation op);
  MLIR_CAPI_EXPORTED intptr_t mlirOperationGetNumOperands(MlirOperation op);
  MLIR_CAPI_EXPORTED MlirValue mlirOperationGetOperand(MlirOperation op,
                                                       intptr_t pos);
  MLIR_CAPI_EXPORTED intptr_t mlirOperationGetNumResults(MlirOperation op);
  MLIR_CAPI_EXPORTED MlirValue mlirOperationGetResult(MlirOperation op,
                                                      intptr_t pos);
  MLIR_CAPI_EXPORTED intptr_t mlirOperationGetNumSuccessors(MlirOperation op);
  MLIR_CAPI_EXPORTED MlirBlock mlirOperationGetSuccessor(MlirOperation op,
                                                         intptr_t pos);
  MLIR_CAPI_EXPORTED intptr_t mlirOperationGetNumAttributes(MlirOperation op);
  MLIR_CAPI_EXPORTED MlirNamedAttribute
  mlirOperationGetAttribute(MlirOperation op, intptr_t pos);
  MLIR_CAPI_EXPORTED MlirAttribute
  mlirOperationGetAttributeByName(MlirOperation op, MlirStringRef name);
  MLIR_CAPI_EXPORTED void mlirOperationSetAttributeByName(MlirOperation op,
                                                          MlirStringRef name,
                                                          MlirAttribute attr);
  MLIR_CAPI_EXPORTED bool mlirOperationRemoveAttributeByName(MlirOperation op,
                                                             MlirStringRef name);
  MLIR_CAPI_EXPORTED void mlirOperationPrint(MlirOperation op,
                                             MlirStringCallback callback,
                                             void *userData);
  MLIR_CAPI_EXPORTED void mlirOperationPrintWithFlags(MlirOperation op,
                                                      MlirOpPrintingFlags flags,
                                                      MlirStringCallback callback,
                                                      void *userData);
  MLIR_CAPI_EXPORTED void mlirOperationDump(MlirOperation op);
  MLIR_CAPI_EXPORTED MlirRegion mlirRegionCreate();
  MLIR_CAPI_EXPORTED void mlirRegionDestroy(MlirRegion region);
  static inline bool mlirRegionIsNull(MlirRegion region) { return !region.ptr; }
  MLIR_CAPI_EXPORTED MlirBlock mlirRegionGetFirstBlock(MlirRegion region);
  MLIR_CAPI_EXPORTED void mlirRegionAppendOwnedBlock(MlirRegion region,
                                                     MlirBlock block);
  MLIR_CAPI_EXPORTED void
  mlirRegionInsertOwnedBlock(MlirRegion region, intptr_t pos, MlirBlock block);
  MLIR_CAPI_EXPORTED void mlirRegionInsertOwnedBlockAfter(MlirRegion region,
                                                          MlirBlock reference,
                                                          MlirBlock block);
  MLIR_CAPI_EXPORTED void mlirRegionInsertOwnedBlockBefore(MlirRegion region,
                                                           MlirBlock reference,
                                                           MlirBlock block);
  MLIR_CAPI_EXPORTED MlirBlock mlirBlockCreate(intptr_t nArgs,
                                               MlirType const *args);
  MLIR_CAPI_EXPORTED void mlirBlockDestroy(MlirBlock block);
  static inline bool mlirBlockIsNull(MlirBlock block) { return !block.ptr; }
  MLIR_CAPI_EXPORTED MlirBlock mlirBlockGetNextInRegion(MlirBlock block);
  MLIR_CAPI_EXPORTED MlirOperation mlirBlockGetFirstOperation(MlirBlock block);
  MLIR_CAPI_EXPORTED MlirOperation mlirBlockGetTerminator(MlirBlock block);
  MLIR_CAPI_EXPORTED void mlirBlockAppendOwnedOperation(MlirBlock block,
                                                        MlirOperation operation);
  MLIR_CAPI_EXPORTED void mlirBlockInsertOwnedOperation(MlirBlock block,
                                                        intptr_t pos,
                                                        MlirOperation operation);
  MLIR_CAPI_EXPORTED void
  mlirBlockInsertOwnedOperationAfter(MlirBlock block, MlirOperation reference,
                                     MlirOperation operation);
  MLIR_CAPI_EXPORTED void
  mlirBlockInsertOwnedOperationBefore(MlirBlock block, MlirOperation reference,
                                      MlirOperation operation);
  MLIR_CAPI_EXPORTED intptr_t mlirBlockGetNumArguments(MlirBlock block);
  MLIR_CAPI_EXPORTED MlirValue mlirBlockGetArgument(MlirBlock block,
                                                    intptr_t pos);
  MLIR_CAPI_EXPORTED void
  mlirBlockPrint(MlirBlock block, MlirStringCallback callback, void *userData);