src/stubs/ir.ml

open Ctypes

module Bindings (F : FOREIGN) = struct
  open F

  (*===----------------------------------------------------------------------===
   * Context API.
   *===----------------------------------------------------------------------===*)

  module Context = struct
    open Typs.Context

    let create = foreign "mlirContextCreate" (void @-> returning t)
    let equal = foreign "mlirContextEqual" (t @-> t @-> returning bool)
    let is_null = foreign "mlirContextIsNull" (t @-> returning bool)
    let destroy = foreign "mlirContextDestroy" (t @-> returning void)

    let set_allow_unregistered_dialects =
      foreign "mlirContextSetAllowUnregisteredDialects" (t @-> bool @-> returning void)


    let get_allow_unregistered_dialects =
      foreign "mlirContextGetAllowUnregisteredDialects" (t @-> returning bool)


    let num_registered_dialects =
      foreign "mlirContextGetNumRegisteredDialects" (t @-> returning long)


    let num_loaded_dialects =
      foreign "mlirContextGetNumLoadedDialects" (t @-> returning long)


    let get_or_load_dialect =
      foreign
        "mlirContextGetOrLoadDialect"
        (t @-> Typs.StringRef.t @-> returning Typs.Dialect.t)
  end

  (*===----------------------------------------------------------------------===
   * Dialect API.
   *===----------------------------------------------------------------------===*)

  module Dialect = struct
    open Typs.Dialect

    let context = foreign "mlirDialectGetContext" (t @-> returning Typs.Context.t)
    let is_null = foreign "mlirDialectIsNull" (t @-> returning bool)
    let equal = foreign "mlirDialectEqual" (t @-> t @-> returning bool)
    let namespace = foreign "mlirDialectGetNamespace" (t @-> returning Typs.StringRef.t)
  end

  (*===----------------------------------------------------------------------===
   * Location API.
   *===----------------------------------------------------------------------===*)

  module Location = struct
    open Typs.Location

    let file_line_col_get =
      foreign
        "mlirLocationFileLineColGet"
        (Typs.Context.t @-> Typs.StringRef.t @-> uint @-> uint @-> returning t)


    let unknown_get = foreign "mlirLocationUnknownGet" (Typs.Context.t @-> returning t)
    let context = foreign "mlirLocationGetContext" (t @-> returning Typs.Context.t)
    let is_null = foreign "mlirLocationIsNull" (t @-> returning bool)
    let equal = foreign "mlirLocationEqual" (t @-> t @-> returning bool)

    let print =
      foreign
        "mlirLocationPrint"
        (t @-> Typs.string_callback @-> ptr void @-> returning void)
  end

  (*===----------------------------------------------------------------------===
   * Module API.
   *===----------------------------------------------------------------------===*)

  module Module = struct
    let empty =
      foreign "mlirModuleCreateEmpty" (Typs.Location.t @-> returning Typs.Module.t)


    let parse =
      foreign
        "mlirModuleCreateParse"
        (Typs.Context.t @-> Typs.StringRef.t @-> returning Typs.Module.t)


    let context =
      foreign "mlirModuleGetContext" (Typs.Module.t @-> returning Typs.Context.t)


    let body = foreign "mlirModuleGetBody" (Typs.Module.t @-> returning Typs.Block.t)
    let is_null = foreign "mlirModuleIsNull" (Typs.Module.t @-> returning bool)
    let destroy = foreign "mlirModuleDestroy" (Typs.Module.t @-> returning void)

    let operation =
      foreign "mlirModuleGetOperation" (Typs.Module.t @-> returning Typs.Operation.t)
  end

  (*===----------------------------------------------------------------------===
   * OperationState API.
   *===----------------------------------------------------------------------===*)

  module OperationState = struct
    open Typs.OperationState

    let get =
      foreign
        "mlirOperationStateGet"
        (Typs.StringRef.t @-> Typs.Location.t @-> returning t)


    let add_results =
      foreign
        "mlirOperationStateAddResults"
        (ptr t @-> intptr_t @-> ptr Typs.Type.t @-> returning void)


    let add_operands =
      foreign
        "mlirOperationStateAddOperands"
        (ptr t @-> intptr_t @-> ptr Typs.Value.t @-> returning void)


    let add_regions =
      foreign
        "mlirOperationStateAddOwnedRegions"
        (ptr t @-> intptr_t @-> ptr Typs.Region.t @-> returning void)


    let add_successors =
      foreign
        "mlirOperationStateAddSuccessors"
        (ptr t @-> intptr_t @-> ptr Typs.Block.t @-> returning void)


    let add_attributes =
      foreign
        "mlirOperationStateAddAttributes"
        (ptr t @-> intptr_t @-> ptr Typs.NamedAttribute.t @-> returning void)
  end

  (*===----------------------------------------------------------------------===
   * OpPrintFlags API.
   *===----------------------------------------------------------------------===*)

  module OpPrintingFlags = struct
    open Typs.OpPrintingFlags

    let create =
      foreign "mlirOpPrintingFlagsCreate" (void @-> returning Typs.OpPrintingFlags.t)


    let destroy = foreign "mlirOpPrintingFlagsDestroy" (t @-> returning void)

    let large_element_limit =
      foreign
        "mlirOpPrintingFlagsElideLargeElementsAttrs"
        (t @-> intptr_t @-> returning void)


    let enable_debug_info =
      foreign "mlirOpPrintingFlagsEnableDebugInfo" (t @-> bool @-> returning void)


    let print_generic_op_form =
      foreign "mlirOpPrintingFlagsPrintGenericOpForm" (t @-> returning void)


    let use_local_scope = foreign "mlirOpPrintingFlagsUseLocalScope" (t @-> returning void)
  end

  (*===----------------------------------------------------------------------===
   * Operation API.
   *===----------------------------------------------------------------------===*)

  module Operation = struct
    let create =
      foreign
        "mlirOperationCreate"
        (ptr Typs.OperationState.t @-> returning Typs.Operation.t)


    let destroy = foreign "mlirOperationDestroy" (Typs.Operation.t @-> returning void)
    let is_null = foreign "mlirOperationIsNull" (Typs.Operation.t @-> returning bool)

    let equal =
      foreign
        "mlirOperationEqual"
        (Typs.Operation.t @-> Typs.Operation.t @-> returning bool)


    let name =
      foreign "mlirOperationGetName" (Typs.Operation.t @-> returning Typs.Identifier.t)


    let block =
      foreign "mlirOperationGetBlock" (Typs.Operation.t @-> returning Typs.Block.t)


    let parent =
      foreign
        "mlirOperationGetParentOperation"
        (Typs.Operation.t @-> returning Typs.Operation.t)


    let num_regions =
      foreign "mlirOperationGetNumRegions" (Typs.Operation.t @-> returning intptr_t)


    let region =
      foreign
        "mlirOperationGetRegion"
        (Typs.Operation.t @-> intptr_t @-> returning Typs.Region.t)


    let next_in_block =
      foreign
        "mlirOperationGetNextInBlock"
        (Typs.Operation.t @-> returning Typs.Operation.t)


    let num_operands =
      foreign "mlirOperationGetNumOperands" (Typs.Operation.t @-> returning intptr_t)


    let operand =
      foreign
        "mlirOperationGetOperand"
        (Typs.Operation.t @-> intptr_t @-> returning Typs.Value.t)


    let num_results =
      foreign "mlirOperationGetNumResults" (Typs.Operation.t @-> returning intptr_t)


    let result =
      foreign
        "mlirOperationGetResult"
        (Typs.Operation.t @-> intptr_t @-> returning Typs.Value.t)


    let num_successors =
      foreign "mlirOperationGetNumSuccessors" (Typs.Operation.t @-> returning intptr_t)


    let succesor =
      foreign
        "mlirOperationGetSuccessor"
        (Typs.Operation.t @-> intptr_t @-> returning Typs.Block.t)


    let num_attributes =
      foreign "mlirOperationGetNumAttributes" (Typs.Operation.t @-> returning intptr_t)


    let attribute =
      foreign
        "mlirOperationGetAttribute"
        (Typs.Operation.t @-> intptr_t @-> returning Typs.NamedAttribute.t)


    let get_attribute_by_name =
      foreign
        "mlirOperationGetAttributeByName"
        (Typs.Operation.t @-> Typs.StringRef.t @-> returning Typs.Attribute.t)


    let set_attribute_by_name =
      foreign
        "mlirOperationSetAttributeByName"
        (Typs.Operation.t @-> Typs.StringRef.t @-> Typs.Attribute.t @-> returning void)


    let remove_attribute_by_name =
      foreign
        "mlirOperationRemoveAttributeByName"
        (Typs.Operation.t @-> Typs.StringRef.t @-> returning bool)


    let print =
      foreign
        "mlirOperationPrint"
        (Typs.Operation.t @-> Typs.string_callback @-> ptr void @-> returning void)


    let print_with_flags =
      foreign
        "mlirOperationPrintWithFlags"
        (Typs.Operation.t
        @-> Typs.OpPrintingFlags.t
        @-> Typs.string_callback
        @-> ptr void
        @-> returning void)


    let dump = foreign "mlirOperationDump" (Typs.Operation.t @-> returning void)
  end

  module Region = struct
    let create = foreign "mlirRegionCreate" (void @-> returning Typs.Region.t)
    let destroy = foreign "mlirRegionDestroy" (Typs.Region.t @-> returning void)
    let is_null = foreign "mlirRegionIsNull" (Typs.Region.t @-> returning bool)

    let first_block =
      foreign "mlirRegionGetFirstBlock" (Typs.Region.t @-> returning Typs.Block.t)


    let append_owned_block =
      foreign
        "mlirRegionAppendOwnedBlock"
        (Typs.Region.t @-> Typs.Block.t @-> returning void)


    let insert_owned_block =
      foreign
        "mlirRegionInsertOwnedBlock"
        (Typs.Region.t @-> intptr_t @-> Typs.Block.t @-> returning void)


    let insert_owned_block_after =
      foreign
        "mlirRegionInsertOwnedBlockAfter"
        (Typs.Region.t @-> Typs.Block.t @-> Typs.Block.t @-> returning void)


    let insert_owned_block_before =
      foreign
        "mlirRegionInsertOwnedBlockBefore"
        (Typs.Region.t @-> Typs.Block.t @-> Typs.Block.t @-> returning void)
  end

  (*===----------------------------------------------------------------------===
   * Block API.
   *===----------------------------------------------------------------------===*)

  module Block = struct
    let create =
      foreign "mlirBlockCreate" (intptr_t @-> ptr Typs.Type.t @-> returning Typs.Block.t)


    let destroy = foreign "mlirBlockDestroy" (Typs.Block.t @-> returning void)
    let is_null = foreign "mlirBlockIsNull" (Typs.Block.t @-> returning bool)

    let next_in_region =
      foreign "mlirBlockGetNextInRegion" (Typs.Block.t @-> returning Typs.Block.t)


    let first_operation =
      foreign "mlirBlockGetFirstOperation" (Typs.Block.t @-> returning Typs.Operation.t)


    let terminator =
      foreign "mlirBlockGetTerminator" (Typs.Block.t @-> returning Typs.Operation.t)


    let append_owned_operation =
      foreign
        "mlirBlockAppendOwnedOperation"
        (Typs.Block.t @-> Typs.Operation.t @-> returning void)


    let insert_owned_operation =
      foreign
        "mlirBlockInsertOwnedOperation"
        (Typs.Block.t @-> intptr_t @-> Typs.Operation.t @-> returning void)


    let insert_owned_operation_after =
      foreign
        "mlirBlockInsertOwnedOperationAfter"
        (Typs.Block.t @-> Typs.Operation.t @-> Typs.Operation.t @-> returning void)


    let insert_owned_operation_before =
      foreign
        "mlirBlockInsertOwnedOperationBefore"
        (Typs.Block.t @-> Typs.Operation.t @-> Typs.Operation.t @-> returning void)


    let num_arguments =
      foreign "mlirBlockGetNumArguments" (Typs.Block.t @-> returning intptr_t)


    let argument =
      foreign "mlirBlockGetArgument" (Typs.Block.t @-> intptr_t @-> returning Typs.Value.t)


    let print =
      foreign
        "mlirBlockPrint"
        (Typs.Block.t @-> Typs.string_callback @-> ptr void @-> returning void)
  end

  (*===----------------------------------------------------------------------===
   * Value API.
   *===----------------------------------------------------------------------===*)
